<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="25dp"
    tools:context=".Activites.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/LabelBtnLogin"
            android:textSize="35sp"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-smallcaps"
            />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorEdt"
            android:textColor="@android:color/white"
            android:hint="@string/Hint_Username"
            android:textColorHint="@android:color/darker_gray"
            android:textAlignment="center"
            android:inputType="text"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorEdt"
            android:textColor="@android:color/white"
            android:hint="@string/Hint_Password"
            android:textColorHint="@android:color/darker_gray"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@color/colorBtn"
            android:text="@string/LabelBtnLogin"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

</RelativeLayout>